--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,3 +5,11 @@
 html {
   font-size: 16px;
 }
+
+body {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  -khtml-user-select: none;
+  user-select: none;
+}
