--- a/src/view/gallery/component/modal/modalStyle.module.scss
+++ b/src/view/gallery/component/modal/modalStyle.module.scss
@@ -23,7 +23,7 @@
     bottom: 0;
     left: 0;
     z-index: 10;
-    background: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.8);
   }
   &__close {
     height: 40px;
