feat: 画廊新增无限加载

--- a/src/view/gallery/component/waterfall/waterfallStyle.module.scss
+++ b/src/view/gallery/component/waterfall/waterfallStyle.module.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   grid-gap: 10px;
+  min-height: 100vh;
   &-column {
     @include flex(
       $x: stretch,
